--- a/templates/mmp_app/faculty_registration.html
+++ b/templates/mmp_app/faculty_registration.html
@@ -1,1 +1,26 @@
-faculty registration
+{% extends "mmp_app/base.html" %}
+
+{%block body_block%}
+<div class="container">
+	{% if user.is_authenticated %}
+       <h2> <a href="{% url 'faculty_logout'%}">Faculty Logout</a> </h2>
+      {% else %}
+       <h2> <a href="{% url 'mmp_app:faculty_login'%}">Faculty Login Here!</a> </h2>
+          {% endif %}
+</div>
+<div class="jumbotron">
+	{% if registered %}
+		<h1>Thank you for registering</h1>
+	{%else%}
+		<h1>Register here!</h1>
+		<h3>Fill out the form:</h3>
+		<form enctype="multipart/form-data" method="post">
+			{% csrf_token %}
+			{{ user_form.as_p }}
+			{{ profile_form.as_p}}
+			<input type="submit" name="" value="Register">
+	{% endif %}
+		</form>
+</div>
+
+{%endblock%}
