--- a/templates/mmp_app/index.html
+++ b/templates/mmp_app/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-This is index
-</body>
-</html>
+{% extends "mmp_app/base.html" %}
+
+{%block body_block%}
+<div class="container">
+	<div class="jumbotron">
+		<h1>Welcome to Material Management Protal !</h1>
+	</div>
+</div>
+{%endblock%}
