--- a/templates/mmp_app/student_registration.html
+++ b/templates/mmp_app/student_registration.html
@@ -13,7 +13,7 @@
           {% endif %}
 </div>
 	{%else%}
-		<h1>Register here!</h1>
+		<h1>Student Register here!</h1>
 		<form enctype="multipart/form-data" method="post">
 			{% csrf_token %}
 			{{ user_form.as_p }}
