--- a/templates/mmp_app/student_registration.html
+++ b/templates/mmp_app/student_registration.html
@@ -5,11 +5,12 @@
 <div class="jumbotron">
 	{% if registered %}
 		<h1>You are succefully registered! Please Login.</h1>
+		<h2> <a  href="{% url 'mmp_app:student_login'%}">Student Login Here!</a> </h2>
 		<div class="container">
 	{% if user.is_authenticated %}
-       <h2> <a  href="{% url 'student_logout'%}">Logout</a> </h2>
+       <h2> <a href="{% url 'logout'%}">Faculty Logout</a> </h2>
       {% else %}
-       <h2> <a  href="{% url 'mmp_app:student_login'%}">Student Login Here!</a> </h2>
+       <h2> <a href="{% url 'mmp_app:faculty_login'%}">Faculty Login Here!</a> </h2>
           {% endif %}
 </div>
 	{%else%}
