--- a/templates/mmp_app/faculty_login.html
+++ b/templates/mmp_app/faculty_login.html
@@ -3,7 +3,7 @@
 {% block body_block %}
 	<div class="jumbotron">
 		<h1>Please Login</h1>
-		<form action="{% url 'mmp_app:faculty_login'%}">
+		<form action="{% url 'mmp_app:faculty_login'%}" method="post">
 			{% csrf_token %}
 			<label for="username">Username</label>
 			<input type="text" name="username" placeholder="Enter Username">
