--- a/templates/mmp_app/faculty_registration.html
+++ b/templates/mmp_app/faculty_registration.html
@@ -3,7 +3,7 @@
 {%block body_block%}
 
 {% if user.is_authenticated %}
-       <h2> <a href="{% url 'logout'%}">Faculty Logout</a> </h2>
+       <h2> <a href="{% url 'mmp_app:faculty_logout'%}">Faculty Logout</a> </h2>
       {% else %}
        <h2> <a href="{% url 'mmp_app:faculty_login'%}">Faculty Login Here!</a> </h2>
           {% endif %}
