--- a/templates/mmp_app/student_registration.html
+++ b/templates/mmp_app/student_registration.html
@@ -1,18 +1,13 @@
 {% extends "mmp_app/base.html" %}
 
 {%block body_block%}
-
-{% if user.is_authenticated %}
-       <h2> <a href="{% url 'mmp_app:student_logout'%}">Student Logout</a> </h2>
-      {% else %}
-       <h2> <a href="{% url 'mmp_app:student_login'%}">Student Login Here!</a> </h2>
-          {% endif %}
-
 <div class="jumbotron">
-	{% if registered %}
+	<div class="container">
+		{% if registered %}
 		<h1>You are succefully registered! Please Login.</h1>
 	{%else%}
 		<h1>Student Register here!</h1>
+		<br>
 		<form enctype="multipart/form-data" method="post">
 			{% csrf_token %}
 			{{ user_form.as_p }}
@@ -20,6 +15,11 @@
 			<input type="submit" name="" value="Register">
 	{% endif %}
 		</form>
+	</div>
+	<br>
+	<div class="container">
+			<a class="btn btn-primary" href="{% url 'mmp_app:student_login'%}" role="button">Login Here</a>
+	</div>
 </div>
 
 {%endblock%}
