--- a/templates/mmp_app/faculty_profile.html
+++ b/templates/mmp_app/faculty_profile.html
@@ -1,4 +1,13 @@
 {% extends "mmp_app/base.html" %}
 {% block body_block %}
-
+<div class="container">
+	<div class="jumbotron">
+       		<h1>Welcome to the Portal</h1>
+  </div>
+  <h3>Faculty Name : {{ name }}</h3>
+  <h3>Faculty Department : {{ dept }}</h3>
+  {% for course in courses %}
+    <h3>{{ course }}</h3>
+  {% endfor %}
+</div>
 {% endblock %}
