--- a/templates/mmp_app/faculty_profile.html
+++ b/templates/mmp_app/faculty_profile.html
@@ -7,12 +7,7 @@
   </div>
   <h3>Faculty Name : {{ name }}</h3>
   <h3>Faculty Department : {{ dept }}</h3>
-  <h3>Courses:</h3>
+  <h3>Courses: {{ courses }}</h3>
   </div>
-  <h3>Faculty Name : {{ name }}</h3>
-  <h3>Faculty Department : {{ dept }}</h3>
-  {% for course in courses %}
-    <h3>{{ course }}</h3>
-  {% endfor %}
 </div>
 {% endblock %}
